2013-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.0.2.

2013-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* Preparing the openvas-libraries 6.0.1 release.

	* CHANGES: Updated.

2013-09-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Revert part of r15612, so that nvt description is sent instead of empty
	results, even for new style plugins.

	* misc/plugutils.c (proto_post_wrapped): Don't test for new style
	plugins before setting action to nvt description.

2013-08-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport for r16369. Patch by Hani Benhabiles.

	* base/openvas_file.c (openvas_file_copy, openvas_file_move): Check Glib
	version before using recently deprecated g_type_init().

2013-06-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Add support for setting the "autofp" parameter via
	omp_get_report_ext.

	* omp/omp.h (omp_get_report_opts_t): Add autofp.

	* omp/omp.c (omp_get_report_ext): Add autofp.

2013-04-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.0.1.

2013-04-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 6.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Switch release version scheme.

2013-04-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport for r15962. Patch by Hani Benhabiles.

	* base/cvss.c (impact_map): Fix Authentication Single Instance value
	from "C" to "S".

2013-04-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport for r15920. Patch by Hani Benhabiles.

	* misc/openvas_auth.c (openvas_auth_init): Test for authentication
	configuration's existence before trying to load it. Log key file
	loading error as warning.

2013-03-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport for r15897. Patch by Werner Koch.
